# esimp

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
cmake/: clang-format.cmake  systemc.cmake
docker/: Dockerfile  systemc_trace.patch
example/: CMakeLists.txt
example/boot/: CMakeLists.txt
example/boot/src/: esimp.cpp
example/mcu0/: CMakeLists.txt
example/mcu0/src/: esimp.cpp
example/platform/: CMakeLists.txt
example/platform/src/: main.cpp
include/esimp/interface/: platform_if.hpp
include/esimp/platform/: context.hpp  context_if.hpp  firmware.hpp  gpio.hpp  hw_irq_if.hpp  irq.hpp  isr.hpp  mcu.hpp  nvic.hpp  realtime.hpp  rtos_thread.hpp  systemc_thread.hpp  timer.hpp  trace.hpp  uart.hpp  update_if.hpp
include/esimp/systemc/: uart_line_half_duplex.hpp
instr/: CMakeLists.txt  instr.cpp
scripts/: gen_header_guards.py
src/: CMakeLists.txt  context.cpp  firmware.cpp  gpio.cpp  irq.cpp  isr.cpp  mcu.cpp  nvic.cpp  rtos_thread.cpp  systemc_thread.cpp  timer.cpp  trace.cpp  uart.cpp
tests/: CMakeLists.txt
tests/mcu0/: CMakeLists.txt
tests/mcu0/src/: esimp.cpp  main.cpp  sim.cpp  testfct.cpp
tests/platform/: CMakeLists.txt
tests/platform/src/: main.cpp
zephyr/: CMakeLists.txt
